--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	// p6spy
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
+//	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
 
 	// querydsl
 	implementation 'com.querydsl:querydsl-jpa'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
