--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,9 +1,7 @@
 spring:
-  profiles:
-    active: test
   datasource:
     #
-    url: jdbc:h2:tcp://localhost/~/querydsl
+    url: jdbc:h2:mem:testdb
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -12,8 +10,8 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        #        show_sql: true
+        show_sql: true
         format_sql: true
-logging.level:
-  org.hibernate.SQL: debug
+#logging.level:
+#  org.hibernate.SQL: debug
   #  org.hibernate.type: trace
